zeit.content.article changes
============================

3.37.2 (unreleased)
-------------------

- Nothing changed yet.


3.37.1 (2018-04-09)
-------------------

- ZON-4581: Remove banner from product management form


3.37.0 (2018-04-03)
-------------------

- ZON-4476: Add "collapse" property for liveblog modules


3.36.0 (2018-03-22)
-------------------

- ZON-4541: Add new checkbox to hide ligatus recommendations


3.35.0 (2018-03-22)
-------------------

- SSL-159: Add puzzleform block


3.34.4 (2018-03-21)
-------------------

- ZON-4494: Style form field for twitter ressort tweet


3.34.3 (2018-03-15)
-------------------

- MAINT: Use generic, parameterized `checkin` worklist item instead of
  specialized `checkin_auto_lsc`


3.34.2 (2018-02-19)
-------------------

- TMS-156: No longer mark (tms-based) keywords required for articles
  (This reverts the requirements given in ZON-2881 and ZON-3305)


3.34.1 (2018-02-02)
-------------------

- MAINT: Remove Google News keyword suggestions, it's not used anymore


3.34.0 (2018-01-29)
-------------------

- Fix brown-bag release


3.33.1 (2018-01-26)
-------------------

- ZON-4296: Add version attribute to liveblog


3.33.0 (2018-01-19)
-------------------

- ZON-4289: Add constraint for news table box block


3.32.1 (2017-11-01)
-------------------

- MAINT: Extract grok-based element factory to zeit.edit


3.32.0 (2017-10-20)
-------------------

- ZON-4227: Implement mail module


3.31.0 (2017-10-19)
-------------------

- MAINT: Extract common modules to z.c.modules: rawtext, jobticker, quiz

- MAINT: Remove obsolete modules: audio, timeline, htmlblock

- MAINT: Remove obsolete video_2 setting


3.30.1 (2017-10-09)
-------------------

- ZON-4180: Use eta instead of countdown for scheduling


3.30.0 (2017-10-04)
-------------------

- ZON-3409: Move from remotetask to celery


3.29.0 (2017-09-28)
-------------------

- ARBEIT-116: Add box which is used as a profile_box in ZAR


3.28.4 (2017-09-27)