@@ -4,7 +4,8 @@ zeit.content.article changes
 3.37.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- BUG-837: Fix yet another browser edge case about whether the user
+  has clicked outside of the editor, and thus it should be saved
 
 
 3.37.1 (2018-04-09)
